[package]

name = "nickel_postgres"
version = "0.3.0"
authors = [
    "mattlknight",
    "bguiz"
]

description = "Postgres middleware for nickel.rs"
license = "MIT"

repository = "https://github.com/nickel-org/nickel-postgres"
readme = "README.md"
keywords = ["nickel", "postgres", "database", "web"]

[dependencies]
nickel = "*"
r2d2 = "*"
r2d2_postgres = "*"
typemap = "*"
plugin = "*"
